Fixing spacing

--- a/main.css
+++ b/main.css
@@ -28,12 +28,14 @@
 
 html {
     background-color: #4F7A8C;
-    transform: rotate(360deg);
+    transform: rotate(180deg);
 }
 
-.container {
+.container, row {
     max-width: 8000px; /* overrides bootstrap */
     background-color: #4F7A8C;
+    padding: 0;
+    margin: 0;
 }
 
 p1, h1, h2 {
@@ -51,7 +53,7 @@ h2 {
 }
 
 p1 {
-    font-size: 1.5cm;
+    font-size: 2.5cm;
     color: #103442;
     margin-top: 50px;
 }
@@ -81,7 +83,14 @@ p1 {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-  }
+
+    margin-bottom: 150px;
+}
+
+#welcome-text {
+    margin-bottom: 220px;
+    margin-top: 120px;
+}
 
 #video-container {
     margin: 0px auto;
